Update Sidekick description

--- a/index.html
+++ b/index.html
@@ -27,17 +27,18 @@
         <div class="text">
           <h1>Sean Peters</h1>
           <p>
-            I'm a software developer with three years' full-stack development
-            experience, and many years before that of implementing and
-            developing digital communications platforms. I used to work at
-            Apple, starting off as an Operations Manager at several Apple
-            Stores, then moving into corporate roles in the Internal
-            Communications team in London and the Retail Training team in
-            Cupertino. I've also worked at Aesop and ao.com
+            I&rsquo;m a software developer with three years of full-stack
+            development experience, as well as many years of expertise in
+            implementing and developing digital communications platforms. My
+            career began at Apple, where I started as an Operations Manager
+            across several Apple Stores before transitioning to corporate roles
+            within the Internal Communications team in London and the Retail
+            Training team in Cupertino. I have also worked at Aesop and ao.com.
           </p>
           <p>
-            In my current role at Cosoft I work on various in-house and client
-            projects, some of which are shown here.
+            In my current role as a software developer at Cosoft, I work on a
+            variety of in-house and client projects, a few of which are
+            highlighted here.
           </p>
           <ul class="icons">
             <li>
@@ -89,15 +90,29 @@
                 searching and activity logging integrations with Salesforce,
                 Dynamics 365, HubSpot, Smokeball and Zapier.
               </p>
-              <p>
-                The process for developing CONNECT integrations involves:
-              </p>
+              <p>The process for developing CONNECT integrations involves:</p>
               <ul>
-                <li>Working with the product manager to define a list of requirements</li>
-                <li>Consulting the provider's API documentation to figure out whether the requirements are possible with the endpoints they provide</li>
-                <li>Prototyping with Postman, unit tests and basic UI to finalise the requirements and design</li>
-                <li>Building the integration with a Laravel backend and a React frontend</li>
-                <li>Testing, getting user feedback and writing any required documentation</li>
+                <li>
+                  Working with the product manager to define a list of
+                  requirements
+                </li>
+                <li>
+                  Consulting the provider's API documentation to figure out
+                  whether the requirements are possible with the endpoints they
+                  provide
+                </li>
+                <li>
+                  Prototyping with Postman, unit tests and basic UI to finalise
+                  the requirements and design
+                </li>
+                <li>
+                  Building the integration with a Laravel backend and a React
+                  frontend
+                </li>
+                <li>
+                  Testing, getting user feedback and writing any required
+                  documentation
+                </li>
               </ul>
               <ul class="technologies">
                 <li>React</li>
@@ -121,19 +136,12 @@
             <div class="text">
               <h3 id="sidekick">Sidekick</h3>
               <p>
-Led the development of Sidekick, an AI assistant that transcribes phone calls using OpenAI Whisper and provides summaries, sentiment analysis and suggested next steps.
+                Led the development of Sidekick, an AI assistant that
+                transcribes phone calls using OpenAI Whisper and Google Gemini
+                and provides summaries, sentiment analysis and suggested next
+                steps.
               </p>
-              <p>
-                The process for developing Sidekick involved:
-              </p>
-              <ul>
-                <li>Working with the product manager to define a list of requirements</li>
-                <li>Consulting the provider's API documentation to figure out whether the requirements are possible with the endpoints they provide</li>
-                <li>Prototyping with Postman, unit tests and basic UI to finalise the requirements and design</li>
-                <li>Building the integration with a Laravel backend and a React frontend</li>
-                <li>Testing, getting user feedback and writing any required documentation</li>
-              </ul>
-              <ul class="technologies"> 
+              <ul class="technologies">
                 <li>React</li>
                 <li>Laravel (PHP)</li>
                 <li>MySQL</li>
@@ -145,11 +153,11 @@ Led the development of Sidekick, an AI assistant that transcribes phone calls us
             <div class="images">
               <img
                 src="images/sidekick.png"
-                alt="Screenshot of the Sidekick interface."
+                alt="Screenshot of the Sidekick interface showing a table of recent calls with 'AI' buttons next to them"
               />
               <img
                 src="images/sidekick-summary.png"
-                alt="Screenshot of a Sidekick call summary."
+                alt="A Siekick summary of a call, showing a positive sentiment analysis, a brief summary of the call content and some next steps"
               />
             </div>
           </article>
